--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pmarsceill/just-the-docs
-
+title: Proxmox VE
 logo: https://raw.githubusercontent.com/Lucho00Cuba/Proxmox/main/src/logo.png
